--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
 
         .hero {
-            background: url('images/hero.jpg') center/cover no-repeat;
+            background: url('images/juan.png') center/cover no-repeat;
             height: 70vh;
             display: flex;
             align-items: center;
@@ -232,7 +232,7 @@
         </div>
     </section>
     <section class="about" id="sobre-mi">
-        <img src="images/juan.jpg" alt="Juan abogado penal">
+        <img src="images/juan.png" alt="Juan abogado penal">
         <div>
             <h2>Sobre mí</h2>
             <p>Abogado penalista con amplia experiencia en casos complejos, delitos económicos y defensa legal de
