--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juan - Abogado Penal</title>
+    <title>Gadima Abogados</title>
     <style>
         :root {
             --dark: #0c111a;
@@ -215,7 +215,7 @@
     <header>
         <div class="logo-area">
             <img src="images/logo.png" alt="Logo abogacía" />
-            <span>Juan · Abogado Penal</span>
+            <span>Gadima Abogados</span>
         </div>
         <nav>
             <a href="#inicio">Inicio</a>
